# advent_of_code_2021

./: .gitignore  LICENSE  README.md
d/: puzzle_1.d  puzzle_17.d  puzzle_18.d  puzzle_4.d  puzzle_5.d
day_1/: day_1_1.py  day_1_2.py
day_10/: day_10_1.d  day_10_1.py  day_10_2.d  day_10_2.py
day_11/: day_11_1.d  day_11_1.py  day_11_2.d  day_11_2.py
day_12/: day_12_1.py  day_12_2.py
day_13/: day_13_1.py  day_13_2.py
day_14/: day_14_1.py  day_14_2.py
day_15/: day_15_1.py  day_15_2.py
day_16/: day_16_1.py  day_16_2.py
day_17/: day_17_1.py  day_17_2.py
day_2/: day_2_1.d
day_20/: day_20.py  day_20_1.py
day_21/: day_21_1.py  day_21_2.py
day_22/: day_22.py
day_23/: day_23_1.py  day_23_2.py
day_24/: day_24.py
day_25/: day_25.py
day_3/: day_3_1.py
day_5/: day_5_2.py
day_6/: day_6.d
day_7/: day_7_1.d  day_7_2.d
day_8/: day_8_2.py
day_9/: day_9_1.py
python/: pyproject.toml  setup.cfg  tox.ini
python/aoc/: puzzle_11.py  puzzle_13.py  puzzle_14.py  puzzle_15.py  puzzle_18.py  puzzle_3.py  puzzle_4.py  puzzle_6.py  puzzle_7.py  puzzle_8.py  puzzle_9.py
rust/: puzzle_1.rs  puzzle_2.rs  puzzle_3.rs  puzzle_4.rs
