[tool.poetry]
name = "advent_of_code_2021"
version = "0.1.0"
description = ""
authors = ["Oliver Hofkens <oli.hofkens@gmail.com>"]
packages = [
    { include = "aoc" }
]

[tool.poetry.dependencies]
python = "^3.10"

black = { version = "==21.8b0", optional = true }
flake8 = { version = "^3.8", optional = true }
isort = { version = "^5.7", optional = true }
mypy = { version = "^0.800", optional = true }
pytest = { version = "^6.2", optional = true }
pytest-cov = { version = "*", optional = true }

[tool.poetry.extras]
linting = ["flake8", "black", "isort", "mypy"]
testing = ["pytest", "pytest-cov"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

